[gd_scene load_steps=58 format=2]

[ext_resource path="res://assets/children/baby cry 2.png" type="Texture" id=1]
[ext_resource path="res://assets/children/baby no cry.png" type="Texture" id=2]
[ext_resource path="res://src/Child.gd" type="Script" id=3]
[ext_resource path="res://src/ItemFrames.tres" type="SpriteFrames" id=4]
[ext_resource path="res://src/theme.tres" type="Theme" id=5]
[ext_resource path="res://assets/items/bubble.png" type="Texture" id=6]
[ext_resource path="res://assets/items/tombstone.PNG" type="Texture" id=7]
[ext_resource path="res://assets/children/child_spin2.png" type="Texture" id=8]
[ext_resource path="res://assets/children/baby cry 1.png" type="Texture" id=9]
[ext_resource path="res://assets/children/teen_spin1.png" type="Texture" id=10]
[ext_resource path="res://assets/children/baby cry 3.png" type="Texture" id=11]
[ext_resource path="res://assets/children/adult spin1.png" type="Texture" id=12]
[ext_resource path="res://assets/children/baby cry 4.png" type="Texture" id=13]
[ext_resource path="res://assets/children/adult spin 6.png" type="Texture" id=14]
[ext_resource path="res://assets/children/adult spin 4.png" type="Texture" id=15]
[ext_resource path="res://assets/children/adult spin2.png" type="Texture" id=16]
[ext_resource path="res://assets/children/adult spin 5.png" type="Texture" id=17]
[ext_resource path="res://assets/children/adult spin3.png" type="Texture" id=18]
[ext_resource path="res://assets/children/child_spin6.png" type="Texture" id=19]
[ext_resource path="res://assets/children/child_spin5.png" type="Texture" id=20]
[ext_resource path="res://assets/children/child_spin4.png" type="Texture" id=21]
[ext_resource path="res://assets/children/child_spin1.png" type="Texture" id=22]
[ext_resource path="res://assets/children/child_spin3.png" type="Texture" id=23]
[ext_resource path="res://assets/children/teen_spin5.png" type="Texture" id=24]
[ext_resource path="res://assets/children/teen_spin4.png" type="Texture" id=25]
[ext_resource path="res://assets/children/teen_spin6.png" type="Texture" id=26]
[ext_resource path="res://assets/children/teen_spin2.png" type="Texture" id=27]
[ext_resource path="res://assets/children/teen_spin3.png" type="Texture" id=28]
[ext_resource path="res://assets/shadows/shadow_circle.png" type="Texture" id=29]
[ext_resource path="res://assets/children/child_spin7.png" type="Texture" id=30]
[ext_resource path="res://assets/children/child_spin8.png" type="Texture" id=31]
[ext_resource path="res://assets/children/teen_spin8.png" type="Texture" id=32]
[ext_resource path="res://assets/children/teen_spin7.png" type="Texture" id=33]
[ext_resource path="res://assets/children/adult_spin7.png" type="Texture" id=34]
[ext_resource path="res://assets/children/adult_spin8.png" type="Texture" id=35]
[ext_resource path="res://assets/children/adult_peaceout.png" type="Texture" id=36]
[ext_resource path="res://assets/sounds/crying/adult cry.mp3" type="AudioStream" id=37]
[ext_resource path="res://assets/sounds/crying/child cry.mp3" type="AudioStream" id=38]
[ext_resource path="res://assets/sounds/crying/baby cry.mp3" type="AudioStream" id=39]
[ext_resource path="res://assets/sounds/crying/teen cry.mp3" type="AudioStream" id=40]
[ext_resource path="res://assets/sounds/satisfied.wav" type="AudioStream" id=41]
[ext_resource path="res://assets/sounds/npc death.mp3" type="AudioStream" id=42]
[ext_resource path="res://assets/smokevfx/smoke5.png" type="Texture" id=43]
[ext_resource path="res://assets/smokevfx/smoke8.png" type="Texture" id=44]
[ext_resource path="res://assets/smokevfx/smoke6.png" type="Texture" id=45]
[ext_resource path="res://assets/smokevfx/smoke7.png" type="Texture" id=46]
[ext_resource path="res://assets/smokevfx/smoke9.png" type="Texture" id=47]
[ext_resource path="res://assets/smokevfx/smoke3.png" type="Texture" id=48]
[ext_resource path="res://assets/smokevfx/smoke2.png" type="Texture" id=49]
[ext_resource path="res://assets/smokevfx/smoke4.png" type="Texture" id=50]
[ext_resource path="res://assets/smokevfx/smoke1.png" type="Texture" id=51]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "1",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 1 ), ExtResource( 11 ), ExtResource( 13 ) ],
"loop": true,
"name": "1Request",
"speed": 6.0
}, {
"frames": [ ExtResource( 22 ), ExtResource( 8 ), ExtResource( 23 ), ExtResource( 30 ), ExtResource( 21 ), ExtResource( 31 ), ExtResource( 20 ), ExtResource( 19 ) ],
"loop": true,
"name": "2",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 33 ), ExtResource( 25 ), ExtResource( 32 ), ExtResource( 24 ), ExtResource( 26 ) ],
"loop": true,
"name": "3",
"speed": 9.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 16 ), ExtResource( 18 ), ExtResource( 34 ), ExtResource( 15 ), ExtResource( 35 ), ExtResource( 17 ), ExtResource( 14 ) ],
"loop": true,
"name": "4",
"speed": 12.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": false,
"name": "Dead",
"speed": 0.0
}, {
"frames": [ ExtResource( 36 ) ],
"loop": true,
"name": "Peace",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 24.0

[sub_resource type="CircleShape2D" id=3]
radius = 44.0114

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "fade"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.3, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 51 ), ExtResource( 49 ), ExtResource( 48 ), ExtResource( 50 ), ExtResource( 43 ), ExtResource( 45 ), ExtResource( 46 ), ExtResource( 44 ), ExtResource( 47 ) ],
"loop": false,
"name": "smoke up",
"speed": 8.0
} ]

[node name="Child" type="KinematicBody2D" groups=["Child", "Reset"]]
collision_layer = 16
collision_mask = 67
script = ExtResource( 3 )

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -96 )
scale = Vector2( 0.2, 0.2 )
z_as_relative = false
frames = SubResource( 1 )
animation = "Peace"
playing = true

[node name="PatienceNode" type="Node2D" parent="."]
position = Vector2( 0, -150 )
scale = Vector2( 0.15, 0.15 )
z_index = 3
z_as_relative = false

[node name="Patience" type="TextureProgress" parent="PatienceNode"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -500.0
margin_right = 300.0
margin_bottom = 500.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 80, 60 )
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 5 )
step = 0.001
value = 80.5
texture_under = ExtResource( 6 )
texture_progress = ExtResource( 6 )
tint_under = Color( 0.8, 1, 0.8, 1 )
tint_progress = Color( 0.4, 1, 0.4, 1 )

[node name="Icon" type="AnimatedSprite" parent="PatienceNode/Patience"]
position = Vector2( 288, 310 )
scale = Vector2( 1.3, 1.3 )
frames = ExtResource( 4 )
animation = "Items"
frame = 4

[node name="MoveCollision" type="CollisionShape2D" parent="."]
position = Vector2( 0, -8 )
shape = SubResource( 2 )

[node name="ItemArea" type="Area2D" parent="."]
position = Vector2( 0, -8 )
collision_layer = 32
collision_mask = 8

[node name="ItemCollision" type="CollisionShape2D" parent="ItemArea"]
shape = SubResource( 3 )

[node name="StartRequest" type="Timer" parent="."]
wait_time = 8.0
one_shot = true

[node name="ZoomiesCooldown" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[node name="Shadow" type="Sprite" parent="."]
position = Vector2( 1, 0 )
scale = Vector2( 0.3, 0.15 )
z_index = -2
texture = ExtResource( 29 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 5 )
anims/fade = SubResource( 4 )

[node name="Cry1" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 39 )

[node name="Cry2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 38 )
volume_db = 1.0

[node name="Cry3" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 40 )
volume_db = 6.0

[node name="Cry4" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 37 )
volume_db = 2.0

[node name="Satisfied" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 41 )

[node name="Dead" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 42 )

[node name="Smoke" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( -2, -120 )
scale = Vector2( 0.3, 0.3 )
frames = SubResource( 6 )
animation = "smoke up"

[connection signal="body_entered" from="ItemArea" to="." method="_on_ItemArea_body_entered"]
[connection signal="timeout" from="StartRequest" to="." method="_on_StartRequest_timeout"]
[connection signal="timeout" from="ZoomiesCooldown" to="." method="_on_ZoomiesCooldown_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="frame_changed" from="Smoke" to="." method="_on_Smoke_frame_changed"]
